langtools/test/tools/javac/limits/StringLength.out
StringLength.java:45:37: compiler.err.limit.string
1 error
